...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="d4R-jy-OZJ" id="Eot-pN-U1u"/>
                            <outlet property="delegate" destination="d4R-jy-OZJ" id="v2p-gi-OiP"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Menu" id="Ij0-Cy-as0"/>
                    <connections>
                        <segue destination="bcS-1X-EmD" kind="show" identifier="ShowLabelDetail" id="efo-Td-6E2"/>
                        <segue destination="8ST-S9-cFL" kind="show" identifier="ShowButtonDetail" id="G59-ZS-sNS"/>
                        <segue destination="gDq-KW-JhG" kind="show" identifier="ShowTextFieldDetail" id="i2J-LX-wSE"/>
                        <segue destination="fj1-kD-F2C" kind="show" identifier="ShowSizeClasses" id="DpT-NQ-7bA"/>
                        <segue destination="sNw-OD-WUk" kind="show" identifier="ShowAlertDetail" id="mPd-PI-igP"/>
...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eu5-Zl-gvK">
                                <rect key="frame" x="10" y="145" width="100" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="2VU-d2-U4A"/>
                                </constraints>
                                <state key="normal" title="Normal Button"/>
                                <connections>
                                    <action selector="buttonWasTapped:" destination="8ST-S9-cFL" eventType="touchUpInside" id="oby-DQ-VXY"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click the button to control me!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tz6-vF-bsY">
                                <rect key="frame" x="10" y="104" width="355" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="showResultLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
